@@ -11,14 +11,12 @@
 		<li>Show referencing tables/objects for constraints/sequences/???
 		<li>columns of Views: show properties
 		<li>Most property dlgs: check for readOnly if no sufficient rights are available
-		<li>Allow sorting/filtering of data in EditGrid.
 		<li>Make dist should also write the proper versions in pgadmin3 spec file.
 		<li>CREATE TABLE LIKE table
 		<li>Operator class property: to implement
 		<li>better editing in EditGrid (color, validation)
 		<li>GRANT wizard
         	<li>Apply for some property dialogs
-		<li>Include column statistics as property of the column, and in SQL definition.
                 <li>Add CLUSTERed index support for PostgreSQL 7.4 - ALTER TABLE foo CLUSTER ON blah;
                 <li>List column defaults on views.
 	</ul>
