@@ -57,12 +57,20 @@
             <pos>70,65d</pos>
             <size>13,12d</size>
           </object>
-          <object class="wxStaticText" name="stComment">
-            <label>Comment</label>
+          <object class="wxStaticText" name="stAttstattarget">
+            <label>Statistics</label>
             <pos>5,82d</pos>
           </object>
-          <object class="wxTextCtrl" name="txtComment">
+          <object class="wxTextCtrl" name="txtAttstattarget">
             <pos>70,80d</pos>
+            <size>135,12d</size>
+          </object>
+          <object class="wxStaticText" name="stComment">
+            <label>Comment</label>
+            <pos>5,102d</pos>
+          </object>
+          <object class="wxTextCtrl" name="txtComment">
+            <pos>70,100d</pos>
             <size>135,117d</size>
             <style>wxTE_MULTILINE</style>
           </object>
