@@ -1,6 +1,17 @@
+<b>Key to developers</b>
+<ul>
+    <li>DP  - Dave Page
+    <li>AP  - Andreas Pflug
+    <li>JMP - Jean-Michel Poure
+    <li>HS  - Hiroshi Saito
+    <li>AHP - Adam H. Pendleton
+    <li>MP  - Marc Persuy
+</ul>
+    
 <ul>
     <li>V1.0.0
     <ul>
+        <li>2003-10-20 HS  - Added support for column statistics.
         <li>2003-10-19 AP  - Loading of ctlSQLBox from resource
         <li>2003-10-19 AP  - User expiry
         <li>2003-10-18 DP  - Allow filtering of data in the edit grid.
@@ -69,7 +80,7 @@
         <li>2003-08-21 AP - Using EVT_TEXT for combobox selchange events.
         <li>2003-08-21 AP - encoding names read from backend, removed from resource.
         <li>2003-08-19 DP - Prevent comments on view columns causing display problems.
-        <li>2003-08-19 Marc Persuy - Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale search bug.
+        <li>2003-08-19 MP - Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale search bug.
         <li>2003-08-18 DP - Correctly quote primary key name in Edit Grid. Was preventing viewing of data in some tables.
         <li>2003-08-17 AP - added REINDEX, frmVacuum->frmMaintenance.
         <li>2003-08-15 AP - added SSL-support.
